--- a/myshop/shop/templates/shop/product/list.html
+++ b/myshop/shop/templates/shop/product/list.html
@@ -22,7 +22,7 @@
       {% endfor %}
     </ul>
     </div>
-    <div id="main" class="product_list">
+    <div id="main" class="product-list">
     <h1>{% if category %}{{category.name}}{% else%}Products
     {% endif %}
     </h1>
